Update rdma-core with NEX provider changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -749,6 +749,7 @@ add_subdirectory(providers/ipathverbs)
 add_subdirectory(providers/rxe)
 add_subdirectory(providers/rxe/man)
 add_subdirectory(providers/siw)
+add_subdirectory(providers/nex)
 
 add_subdirectory(libibmad)
 add_subdirectory(libibnetdisc)
